--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Challenge_Chapter5</string>
+    <string name="app_name">Disney App</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="login">Login</string>
     <string name="input_email_anda">Masukkan email anda</string>
@@ -39,4 +39,14 @@
     <string name="bahasa_inggris">Bahasa Inggris</string>
     <string name="logout_berhasil">Logout berhasil!</string>
     <string name="pilih_tanggal">Pilih Tanggal</string>
+<!-- TODO: Remove or change this placeholder text -->>
+    <string name="detail_karakter">Detail Karakter</string>
+    <string name="favorite">Favorit</string>
+    <string name="berhasil_favorit">Berhasil menambahkan ke favorit!</string>
+    <string name="berhasil_unfavorit">Berhasil menghapus dari favorit!</string>
+    <string name="permission_denied">Permission ditolak</string>
+    <string name="permission_denied_msg">Permission ditolak, mohon izinkan permissions di pengaturan.</string>
+    <string name="settings">Pengaturan</string>
+    <string name="cancel">Batal</string>
+    <string name="pilih_gambar">Pilih gambar</string>
 </resources>
